--- a/orderTracking/src/app/header-bar/header-bar.component.html
+++ b/orderTracking/src/app/header-bar/header-bar.component.html
@@ -1,3 +1,15 @@
-<p>
-  header-bar works!
-</p>
+<div class="flex-container" style="padding: 8px;">
+  <div class="flex-2">
+    <img src="../../assets/1024px-Logo_NIKE.svg.png" height="45px" width="120px">
+  </div>
+
+  <div class="flex-3">
+    <input type="text" class="input-style">
+    <button class="search-button"><img src="../../assets/search-icon.png" height="25px;"></button>
+  </div>
+
+  <div class="flex-2 align-right">
+    <div class="user">AP</div>
+  </div>
+
+</div>
