--- a/orderTracking/src/app/status-bar/status-bar.component.css
+++ b/orderTracking/src/app/status-bar/status-bar.component.css
@@ -1,10 +1,12 @@
 .flex-container {
     display: flex;
     padding: 10px;
-    border-top: 1px solid #999;
+    border-top: 1px solid #f5f5f5;
+    border-bottom: 1px solid #f5f5f5;
 }
 
 .flex-1 {
     flex: 1;
     text-align: center;
+    font-size: 12px;
 }
