add some components

--- a/orderTracking/src/app/app.component.html
+++ b/orderTracking/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header-bar></app-header-bar>
 <app-status-bar></app-status-bar>
+<app-order-status></app-order-status>
 <router-outlet></router-outlet>
 
